# gui_test

./: Cargo.toml  README.md  index.html  sw.js
assets/: sw.js
src/: main.rs  rand_gen.rs
src_generator/: main.rs
